--- a/games/ss/sswin/sswin/sswin.vcxproj.filters
+++ b/games/ss/sswin/sswin/sswin.vcxproj.filters
@@ -107,7 +107,7 @@
     <ClCompile Include="..\..\net.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\CCDK\backend\ssproto_cli.cpp">
+    <ClCompile Include="..\..\..\..\backend\ssproto_cli.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
