--- a/skeletons/one_to_many/one_to_many.vcxproj.filters
+++ b/skeletons/one_to_many/one_to_many.vcxproj.filters
@@ -21,5 +21,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="one_to_many.shinra" />
   </ItemGroup>
 </Project>
